<resources>
    <string name="app_name">skillpath</string>
    <string name="illustration">larry a</string>

    <string name="google_signin">Forgot Password? Click here!</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="forgot_password_description">Forgot yor password? Fill the email below and et us send you an email to reset your password</string>
    <string name="hint_email">Email</string>
    <string name="continue_fp">Continue</string>
    <string name="have_account_sign_in">Have an account? Sign In</string>
    <string name="code_verification_description">We have sent a password reset otp to your email</string>
    <string name="submit_otp">Submit</string>
    <string name="code_verification">Code Verification</string>
    <string name="new_password">New Password</string>
    <string name="please_create_new_password">Please create new password</string>

    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password? Click here!</string>
    <string name="login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="dont_have_an_account_Sign_up">Don’t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_Sign_In">Have an account? Sign In</string>
    <string name="belajar_kotlin">Belajar Kotlin</string>
    <string name="deskripsi_course">Kursus ini dirancang untuk membantu peserta memahami dasar-dasar hingga teknik lanjutan dalam bahasa pemrograman Kotlin. Kotlin telah menjadi bahasa resmi untuk pengembangan aplikasi Android,</string>
    <string name="go_to_course">Go to Course</string>
    <string name="rating_now">Rating Now</string>
    <string name="rate_us">Rate Us</string>
    <string name="rating">Rating: 0</string>
    <string name="submit">Submit</string>


    <string name="business">Business</string>
    <string name="project_management">Project Management</string>
    <string name="programming">Programming</string>
    <string name="computer_science">Computer Science</string>
    <string name="data_analysis">Data Analysis</string>
    <string name="data_science">Data Science</string>
    <string name="leadership">Leadership</string>
    <string name="language">Language</string>
    <string name="life_science">Life Science</string>
    <string name="engineering">Engineering</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="coding">Coding</string>
    <string name="modeling">Modeling</string>
    <string name="data_security">Data Security</string>
    <string name="software_development">Software Development</string>
    <string name="statistics">Statistics</string>
    <string name="python">Python</string>
    <string name="mathematics">Mathematics</string>

    <string name="select_your_interest">Select your interest</string>


</resources>
